src/shell/sass/gnome-shell/_common.scss
/* ... */
.message {
  // No need to set any height/min-height with fixed values,
  // 'no-values' can keep its height automatically even
  // if switched to scrolled-view mode.
  // So only padding property seems enough to control the spacing.
  @if $ver > 3.25 { padding: if($ref_weight >= 1.0, 0.9em, 0.6em); }
  @else { padding: 6px; }
  border-radius: 0;
  background-color: transparent;
  color: $osd_fg;

  .popup-menu & {
    @if $ver > 3.25 {
      padding: if($ref_weight >= 1.0, 0.6em, 0.45em);
      background-color: $base;
    }
    @else {
      background-color: $semi_fill_bg;
      &:ltr { box-shadow: inset 4px 0 $out_fg; }
      &:rtl { box-shadow: inset -4px 0 $out_fg; }
    }
    color: $sec_fg;

    @if $ver < 3.31 {
      .message-icon-bin > StIcon,
      .message-title,
      .message-content { color: $sec_fg; }
    }
    @else {
      .message-icon-bin > StIcon,
      .message-icon-bin > .fallback-window-icon,
      .message-title,
      .message-content { color: $sec_fg; }
    }

    &:hover,
    &:focus {
      @if $ver > 3.25 {
        background-color: mix($fg, $base, percentage($a_trk_1)); // use opaque
      }
      @else {
        background-color: $acc_semi_fill_bg;
        &:ltr { box-shadow: inset 4px 0 opacity($acc_bg, $a_fg_2nd); }
        &:rtl { box-shadow: inset -4px 0 opacity($acc_bg, $a_fg_2nd); }
      }
      color: $fg;

      @if $ver < 3.31 {
        .message-icon-bin > StIcon,
        .message-title,
        .message-content { color: $fg; }
      }
      @else {
        .message-icon-bin > StIcon,
        .message-icon-bin > .fallback-window-icon,
        .message-title,
        .message-content { color: $fg; }
      }

      .message-secondary-bin {
        &,
        > .event-time { color: $sec_fg; }
      }
    }
    &:active {
      @if $ver > 3.25 {
        background-color: mix($fg, $base, percentage($a_trk_2));
      }
      @else {
        background-color: $acc_fill_bg;
        &:ltr { box-shadow: inset 4px 0 $acc_bg; }
        &:rtl { box-shadow: inset -4px 0 $acc_bg; }
      }
      color: $fg;

      @if $ver < 3.31 {
        .message-icon-bin > StIcon,
        .message-title,
        .message-content { color: $fg; }
      }
      @else {
        .message-icon-bin > StIcon,
        .message-icon-bin > .fallback-window-icon,
        .message-title,
        .message-content { color: $fg; }
      }

      .message-secondary-bin {
        &,
        > .event-time { color: $sec_fg; }
      }
    }
  }

  &-icon-bin {
    @if $ver > 3.25 {
      margin: if($ref_weight >= 1.0, 0.2em 0.6em 0, 0.2em 0.45em 0);
    }
    @else {
      // subtract .message-content's 'close' button padding
      &:ltr { margin: 4px - 2px 0 0 6px; }
      &:rtl { margin: 4px - 2px 6px 0 0; }
    }
    padding: 0; // FIXME: needs to override the stock gresource
                // (Since upstream still uses padding properties)

    @if $ver < 3.31 {
      > StIcon {
        min-width: $icon_size;  // for an indentation of .message-content
        min-height: $icon_size; // reserve StIcon region even if StIcon was null
        color: $osd_fg;
        icon-size: $icon_size;
        -st-icon-style: symbolic;
      }
    }
    @else {
      > StIcon,
      > .fallback-window-icon {
        min-width: $icon_size;
        min-height: $icon_size;
        color: $osd_fg;
        icon-size: $icon_size;
        -st-icon-style: symbolic;
      }
    }
  }

  &-secondary-bin {
    color: $osd_ter_fg;
    @if $ver > 3.25 {
      &:ltr { padding-left: if($ref_weight >= 1.0, 0.6em, 0.45em); }
      &:rtl { padding-right: if($ref_weight >= 1.0, 0.6em, 0.45em); }
    }
    @else {
      &:ltr { padding-left: 6px; }
      &:rtl { padding-right: 6px; }
    }

    > .event-time {
      @if $ver > 3.25 {
        @include fontscaling(0.9);
        min-height: $icon_size - 4px;
        margin-bottom: (1.15em - 0.9em) * 1.22;
        padding: 0;
      }
      @else {
        @include fontscaling(0.8);
        // '.message-title' padding + extra 0.1em for finer base-line
        padding-bottom: 0.5em + 0.1em;
      }
      color: $osd_ter_fg;
    }

    > StIcon {
      padding: 0.2em;
      icon-size: $icon_size;
    }

    .popup-menu & {
      &,
      > .event-time { color: $ter_fg; }
    }
  }

  &-title {
    @include fontscaling(1.1);
    @if $ver > 3.25 {
      min-height: $icon_size - 4px;
      margin-bottom: 0.1em; // base-line correction
      padding: 1.33px 0 0; // for smaller font-scaling-factor
    }
    @else {
      padding: 0 0 4px;
    }
    color: $osd_fg;
    font-weight: 700;
  }

  &-content {
    @if $ver > 3.25 {
      padding: 0;
    }
    @else {
      @include fontscaling(0.9);
      padding: 0 8px 4px;
    }
    color: $osd_fg;

    * > StIcon {
      @if $ver > 3.25 {
        padding: 0.2em;
        icon-size: $icon_size;
      }
      @else {
        padding: 2px;
        icon-size: 1.09em;
      }
      border-radius: $r;
      color: $sec_acc_fg;
    }

    // FIXME: how do you do this in sass?
    *:hover > StIcon,
    *:focus > StIcon {
      color: $acc_fg;
      background-color: $acc_semi_fill_bg;
    }
    *:active > StIcon {
      color: $acc_fg;
      background-color: $acc_fill_bg;
    }
  }
}

.message-media-control {
  padding: 0 8px;
  margin: 0 6px;
  border-radius: $r;
  color: $sec_acc_fg;
  background: transparent;
  background-size: 32px 32px;
  &:hover {
    color: $acc_fg;
    @include image-loader($url: 'assets/media-control-hover.svg');
    background-size: 32px 32px;
  }
  &:active {
    color: $acc_fg;
    @include image-loader($url: 'assets/media-control-active.svg');
    background-size: 32px 32px;
  }
  &:insensitive {
    color: $dis_acc_fg;
    background-image: none;
    background: transparent;
  }
}
/* ... */

